# enterprise-agent-control-plane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: evaluation-report.md  evaluation.md  operations.md  release-manifest.md  system-design.md  threat-model.md  walkthrough-script.md
docs/diagrams/: business-flow.html  deployment-runtime.html
docs/evidence/: evaluation-summary.html  walkthrough-narration.txt
evals/: cases.jsonl
evals/results/: ci-20260716.json  vertex-20260716.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
infra/sql/: 001_init.sql
infra/terraform/: .terraform.lock.hcl  README.md  budget.tf  identity.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: cloud-smoke.sh  render_walkthrough_media.py
src/control_plane/: __init__.py  api.py  app_factory.py  auth.py  config.py  domain.py  eval_harness.py  main.py  migrations.py  model_provider.py  policy.py  repository.py  retrieval.py  seed.py  service.py  telemetry.py  tool_gateway.py  workflow.py
src/tool_server/: __init__.py  main.py  server.py
tests/: conftest.py  test_api.py  test_evaluation.py  test_integration_postgres_mcp.py  test_policy_and_tools.py  test_workflow.py
